force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Porcentaje_garantia_extendida__c.field-meta.xml
<CustomField>
    <fullName>AM_Porcentaje_garantia_extendida__c</fullName>
    <inlineHelpText>Porcentaje de garantía extendida de acuerdo al modelo de interés</inlineHelpText>
    <label>% Garantía extendida</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>