force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Porcentaje_garantia_extendida_S1__c.field-meta.xml
<CustomField>
    <fullName>AM_Porcentaje_garantia_extendida_S1__c</fullName>
    <label>% Garantía extendida sugerido 1</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>