force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Porcentaje_impuesto_al_consumo__c.field-meta.xml
<CustomField>
    <fullName>AM_Porcentaje_impuesto_al_consumo__c</fullName>
    <label>% Impuesto al consumo</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>