force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Porcentaje_IVA_garantia_extendida__c.field-meta.xml
<CustomField>
    <fullName>AM_Porcentaje_IVA_garantia_extendida__c</fullName>
    <label>% IVA garantía extendida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>