force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Porcentaje_seguro_deuda__c.field-meta.xml
<CustomField>
    <fullName>AM_Porcentaje_seguro_deuda__c</fullName>
    <label>% Seguro deuda</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>