force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Porcentaje_seguro_robo__c.field-meta.xml
<CustomField>
    <fullName>AM_Porcentaje_seguro_robo__c</fullName>
    <defaultValue>0</defaultValue>
    <label>% Seguro robo</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>