force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Posee_vehiculo_de_otra_marca__c.field-meta.xml
<CustomField>
    <fullName>AM_Posee_vehiculo_de_otra_marca__c</fullName>
    <label>¿Posee vehiculo de otra marca?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>