force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Precio_de_lista__c.field-meta.xml
<CustomField>
    <fullName>AM_Precio_de_lista__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Precio de lista</inlineHelpText>
    <label>Precio de lista</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>