force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Precio_de_lista_S1__c.field-meta.xml
<CustomField>
    <fullName>AM_Precio_de_lista_S1__c</fullName>
    <label>Precio de lista sugerido 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>