force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Probabilidad__c.field-meta.xml
<CustomField>
    <fullName>AM_Probabilidad__c</fullName>
    <formula>IF
(
	RecordType.Name = &quot;Contado&quot;,
	CASE
	(
		TEXT
		(
			AM_Etapa__c
		),
		&quot;Cotización&quot;, 0.05,
		&quot;Negociacion&quot;, 0.05,
		&quot;Prospectación&quot;, 0.50,
		&quot;Facturación&quot;, 1,
		&quot;No compra&quot;, 0,
		0
	),
	IF
	(
		RecordType.Name = &quot;Crédito&quot;,
		CASE
		(
			TEXT
			(
				AM_Etapa__c
			),
			&quot;Cotización&quot;, 0.05,
		&quot;Negociacion&quot;, 0.05,
		&quot;Prospectación&quot;, 0.50,
		&quot;Facturación&quot;, 1,
		&quot;No compra&quot;, 0,
			0
		),
		0
	)
)</formula>
    <label>Probabilidad (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>