force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Propietario_contacto_principal__c.field-meta.xml
<CustomField>
    <fullName>AM_Propietario_contacto_principal__c</fullName>
    <formula>AM_Usuario_motocicleta__r.Owner.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propietario del contacto principal</label>
    <type>Text</type>
</CustomField>