force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Propietario_motocicleta__c.field-meta.xml
<CustomField>
    <fullName>AM_Propietario_motocicleta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Es la persona propietaria de la motocicleta en caso que el usuario de la motocicleta no sea el propietario.</description>
    <inlineHelpText>Es la persona propietaria de la motocicleta en caso que el usuario de la motocicleta no sea el propietario.</inlineHelpText>
    <label>Propietario vehiculo</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cotizaciones (Propietario vehiculo)</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>