force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Prueba_Fecha_Actividad__c.field-meta.xml
<CustomField>
    <fullName>AM_Prueba_Fecha_Actividad__c</fullName>
    <label>Fecha Ultima Actividad</label>
    <type>DateTime</type>
</CustomField>