force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Prueba_SOLO_Fecha_Actividad__c.field-meta.xml
<CustomField>
    <fullName>AM_Prueba_SOLO_Fecha_Actividad__c</fullName>
    <label>Ultima fecha seguimiento</label>
    <type>Date</type>
</CustomField>