force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Que_aspectos_destaca_del_vehiculo__c.field-meta.xml
<CustomField>
    <fullName>AM_Que_aspectos_destaca_del_vehiculo__c</fullName>
    <label>¿Que aspectos destaca del vehiculo?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>