force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Que_dice_Familia_Amigo_nuevo_vehiculo__c.field-meta.xml
<CustomField>
    <fullName>AM_Que_dice_Familia_Amigo_nuevo_vehiculo__c</fullName>
    <label>Que dice Familia/Amigo x nuevo vehículo?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>