force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Que_diria_a_quien_no_ha_decidido__c.field-meta.xml
<CustomField>
    <fullName>AM_Que_diria_a_quien_no_ha_decidido__c</fullName>
    <label>¿Que diría a quien no ha decidido Honda?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>