force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Que_HONDA_tiene__c.field-meta.xml
<CustomField>
    <fullName>AM_Que_HONDA_tiene__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>¿Que HONDA tiene?</label>
    <referenceTo>AM_Producto__c</referenceTo>
    <relationshipLabel>Cotizaciones (¿Que HONDA tiene?)</relationshipLabel>
    <relationshipName>Cotizaciones2</relationshipName>
    <type>Lookup</type>
</CustomField>