force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Que_lo_llevo_a_comprar_el_vehiculo__c.field-meta.xml
<CustomField>
    <fullName>AM_Que_lo_llevo_a_comprar_el_vehiculo__c</fullName>
    <label>¿Que lo llevo a comprar el vehiculo?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>