force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Que_otras_marcas_considero__c.field-meta.xml
<CustomField>
    <fullName>AM_Que_otras_marcas_considero__c</fullName>
    <label>¿Qué otras marcas consideró?</label>
    <length>80</length>
    <type>Text</type>
</CustomField>