force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Que_vehiculo_tenia2__c.field-meta.xml
<CustomField>
    <fullName>AM_Que_vehiculo_tenia2__c</fullName>
    <label>Que vehículo tenia_Marca Linea Modelo?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>