force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Que_vehiculo_tenia__c.field-meta.xml
<CustomField>
    <fullName>AM_Que_vehiculo_tenia__c</fullName>
    <defaultValue>&quot;Marca Linea Modelo&quot;</defaultValue>
    <label>¿Que vehículo tenia_Marca Linea Modelo?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>