force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Razon_para_no_comprar__c.field-meta.xml
<CustomField>
    <fullName>AM_Razon_para_no_comprar__c</fullName>
    <label>Razón para no comprar</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AM_Etapa__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Mejor diseño otra marca</fullName>
            </value>
            <value>
                <fullName>Mejor equipamento otra marca</fullName>
            </value>
            <value>
                <fullName>Capacidad de Pago</fullName>
            </value>
            <value>
                <fullName>Mejores opciones de financiacion otra marca</fullName>
                <label>Mejores opciones de financiación otra marca</label>
            </value>
            <value>
                <fullName>Mejor atencion otra marca</fullName>
                <label>Mejor atención otra marca</label>
            </value>
            <value>
                <fullName>Mejor servicio postventa otra marca</fullName>
            </value>
            <value>
                <fullName>Realizo otra inversión</fullName>
            </value>
            <value>
                <fullName>Cliente no es contactable</fullName>
            </value>
            <value>
                <fullName>Cambio de ciudad o pais de residencia</fullName>
                <label>Cambio de ciudad o país de residencia</label>
            </value>
            <value>
                <fullName>Año modelo otra marca</fullName>
            </value>
            <value>
                <fullName>Disponibilidad de inventario</fullName>
            </value>
            <value>
                <fullName>Disponibilidad de producto en exhibición</fullName>
            </value>
            <value>
                <fullName>Disponibilidad de test drive</fullName>
            </value>
            <value>
                <fullName>Precio de retoma</fullName>
            </value>
            <value>
                <fullName>No desea seguir siendo contactado</fullName>
            </value>
            <value>
                <fullName>Compró Honda un tercero</fullName>
            </value>
            <value>
                <fullName>Cambio de forma de pago</fullName>
            </value>
            <value>
                <fullName>Compra a través de Renting Total</fullName>
            </value>
            <value>
                <fullName>Mejores opciones de Póliza todo riesgo</fullName>
            </value>
            <value>
                <fullName>Amplio portafolio de Accesorios otra marca</fullName>
            </value>
            <value>
                <fullName>Mejores tiempos de entrega del vehículo</fullName>
            </value>
            <value>
                <fullName>Mejor experiencia en Prueba de Manejo</fullName>
            </value>
            <value>
                <fullName>Mejor Garantía otra Marca</fullName>
            </value>
            <value>
                <fullName>Falta de disponibilidad de inventario</fullName>
            </value>
            <value>
                <fullName>Falta de disponibilidad de producto en exhibición</fullName>
            </value>
            <value>
                <fullName>Compró Honda a un tercero</fullName>
            </value>
            <value>
                <fullName>Menor precio otra marca</fullName>
            </value>
            <value>
                <fullName>Mejor equipamento - Seguridad -  otra marca</fullName>
            </value>
            <value>
                <fullName>Mejor equipamento - Desempeño - otra marca</fullName>
            </value>
            <value>
                <fullName>Mejor equipamento - Conectividad - otra marca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>