force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Recibo_de_caja__c.field-meta.xml
<CustomField>
    <fullName>AM_Recibo_de_caja__c</fullName>
    <inlineHelpText>Debe registrar el recibo de caja RC#######, ejemplo RC000356, o la palabra CARTA100%.</inlineHelpText>
    <label>Recibo de caja</label>
    <type>TextArea</type>
</CustomField>