force-app/main/default/objects/AM_Oportunidad__c/fields/AM_ReporteDataCredito__c.field-meta.xml
<CustomField>
    <fullName>AM_ReporteDataCredito__c</fullName>
    <label>Reporte Data Credito</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>