force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Saldo_a_financiar_Simulacion2__c.field-meta.xml
<CustomField>
    <fullName>AM_Saldo_a_financiar_Simulacion2__c</fullName>
    <label>Saldo a financiar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>