force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Servicios_adicionales__c.field-meta.xml
<CustomField>
    <fullName>AM_Servicios_adicionales__c</fullName>
    <label>Servicios adicionales</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sustituto</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Impermeabilización</fullName>
            </value>
            <value>
                <fullName>GPS</fullName>
            </value>
            <value>
                <fullName>Kit de seguridad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>