force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Servicios_incluidos_Renting__c.field-meta.xml
<CustomField>
    <fullName>AM_Servicios_incluidos_Renting__c</fullName>
    <formula>IF( TEXT( AM_Tipo_Renting__c )=&quot;Renting Total&quot;,&quot;Trámites iniciales y anuales&quot; &amp; BR() &amp; &quot;Impuesto de rodamiento&quot; &amp; BR() &amp;  &quot;Seguro obligatorio SOAT&quot; &amp; BR() &amp; &quot;Póliza todo riesgo&quot; &amp; BR() &amp; &quot;Mantenimientos preventivos&quot; &amp; BR() &amp;&quot;Mantenimientos correctivos&quot; &amp; BR() &amp; &quot;Llantas&quot; &amp; BR() &amp; &quot;Administración operativa del vehículo&quot; &amp; BR() &amp; &quot;Accesorios (según contrato)&quot; &amp; BR() &amp; &quot;Linea de atención al cliente&quot;,

IF(TEXT( AM_Tipo_Renting__c )=&quot;Renting Básico&quot;,&quot;Trámites iniciales y anuales&quot; &amp; BR() &amp; &quot;Impuesto de rodamiento&quot; &amp; BR() &amp;  &quot;Seguro obligatorio SOAT&quot; &amp; BR() &amp; &quot;Póliza todo riesgo&quot; &amp; BR() &amp; &quot;Mantenimientos preventivos&quot; &amp; BR() &amp; &quot;Administración operativa del vehículo&quot; &amp; BR() &amp; &quot;Accesorios (según contrato)&quot; &amp; BR() &amp; &quot;Linea de atención al cliente&quot;,

IF(TEXT( AM_Tipo_Renting__c )=&quot;Renting Total sin llantas&quot;,&quot;Trámites iniciales y anuales&quot; &amp; BR() &amp; &quot;Impuesto de rodamiento&quot; &amp; BR() &amp;  &quot;Seguro obligatorio SOAT&quot; &amp; BR() &amp; &quot;Póliza todo riesgo&quot; &amp; BR() &amp; &quot;Mantenimientos preventivos&quot; &amp; BR() &amp; &quot;Mantenimientos correctivos&quot; &amp; BR() &amp; &quot;Administración operativa del vehículo&quot; &amp; BR() &amp; &quot;Accesorios (según contrato)&quot; &amp; BR() &amp; &quot;Linea de atención al cliente&quot;,

IF( TEXT( AM_Tipo_Renting__c )=&quot;Rent Back Total&quot;,&quot;Trámites iniciales y anuales&quot; &amp; BR() &amp; &quot;Impuesto de rodamiento&quot; &amp; BR() &amp;  &quot;Seguro obligatorio SOAT&quot; &amp; BR() &amp; &quot;Póliza todo riesgo&quot; &amp; BR() &amp; &quot;Mantenimientos preventivos&quot; &amp; BR() &amp;&quot;Mantenimientos correctivos&quot; &amp; BR() &amp; &quot;Llantas&quot; &amp; BR() &amp; &quot;Administración operativa del vehículo&quot; &amp; BR() &amp; &quot;Accesorios (según contrato)&quot; &amp; BR() &amp; &quot;Linea de atención al cliente&quot;,

IF(TEXT( AM_Tipo_Renting__c )=&quot;Rent Back Básico&quot;,&quot;Trámites iniciales y anuales&quot; &amp; BR() &amp; &quot;Impuesto de rodamiento&quot; &amp; BR() &amp;  &quot;Seguro obligatorio SOAT&quot; &amp; BR() &amp; &quot;Póliza todo riesgo&quot; &amp; BR() &amp; &quot;Mantenimientos preventivos&quot; &amp; BR() &amp; &quot;Administración operativa del vehículo&quot; &amp; BR() &amp; &quot;Accesorios (según contrato)&quot; &amp; BR() &amp; &quot;Linea de atención al cliente&quot;,&quot; &quot; )
)
  )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Servicios incluidos</label>
    <type>Text</type>
</CustomField>