force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Subtotal_S2__c.field-meta.xml
<CustomField>
    <fullName>AM_Subtotal_S2__c</fullName>
    <formula>(AM_Precio_de_lista_S2__c / (1 + (AM_Porcentaje_IVA__c + AM_Impuesto_al_consumo_S2__c))) - AM_Valor_descuento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal sugerido 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>