force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Subtotal_Saldo_a_financiar_Pagare__c.field-meta.xml
<CustomField>
    <fullName>AM_Subtotal_Saldo_a_financiar_Pagare__c</fullName>
    <label>Subtotal Saldo a financiar (Pagaré)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>