force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Tasa_de_interes__c.field-meta.xml
<CustomField>
    <fullName>AM_Tasa_de_interes__c</fullName>
    <label>Tasa de interés</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>