force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Test_Drive__c.field-meta.xml
<CustomField>
    <fullName>AM_Test_Drive__c</fullName>
    <label>Realizó Best Drive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>