force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Tipo_contacto__c.field-meta.xml
<CustomField>
    <fullName>AM_Tipo_contacto__c</fullName>
    <formula>IF
( 
	OR
	(
		RecordType.Name = &quot;Crédito&quot;,    
		RecordType.Name = &quot;Contado&quot;
	),
	&quot;Contacto&quot;,
	IF
	(
		AND
		(
			RecordType.Name = &quot;Presupuesto&quot;,
			TEXT(AM_Etapa__c) = &quot;Cotización&quot;      
		),
		&quot;Presupuesto&quot;,
		&quot;&quot;
	)
)</formula>
    <label>Tipo contacto</label>
    <type>Text</type>
</CustomField>