force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Tipo_de_cliente__c.field-meta.xml
<CustomField>
    <fullName>AM_Tipo_de_cliente__c</fullName>
    <label>Tipo de cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente Honda</fullName>
            </value>
            <value>
                <fullName>Cliente No Honda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>