force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Tipo_de_cotizacion__c.field-meta.xml
<CustomField>
    <fullName>AM_Tipo_de_cotizacion__c</fullName>
    <label>Tipo de cotizacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevos</fullName>
            </value>
            <value>
                <fullName>Usados</fullName>
            </value>
            <value>
                <fullName>Renting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>