force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Tipo_de_documento_cliente__c.field-meta.xml
<CustomField>
    <fullName>AM_Tipo_de_documento_cliente__c</fullName>
    <formula>IF
(
	NOT(ISBLANK(AM_Usuario_motocicleta__c)),
	TEXT(AM_Usuario_motocicleta__r.AM_Tipo_de_documento__c),
	IF
	(
		NOT(ISBLANK(AM_Propietario_motocicleta__c)),
		TEXT(AM_Propietario_motocicleta__r.AM_Tipo_de_documento__c),
		&quot;Usuario o propietario de la motocicleta sin documento registrado&quot;
	)
)</formula>
    <label>Tipo de documento</label>
    <type>Text</type>
</CustomField>