force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Tipo_Renting__c.field-meta.xml
<CustomField>
    <fullName>AM_Tipo_Renting__c</fullName>
    <label>Tipo de Renting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renting Total</fullName>
            </value>
            <value>
                <fullName>Renting Básico</fullName>
            </value>
            <value>
                <fullName>Rent Back Total</fullName>
            </value>
            <value>
                <fullName>Rent Back Básico</fullName>
            </value>
            <value>
                <fullName>Renting Total sin llantas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>