force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Tipo_venta__c.field-meta.xml
<CustomField>
    <fullName>AM_Tipo_venta__c</fullName>
    <formula>CASE
(
	RecordType.Name,
	&quot;Presupuesto&quot;, &quot;Presupuesto&quot;,
	&quot;Crédito&quot;, &quot;Venta&quot;,
	&quot;Contado&quot;, &quot;Venta&quot;,
	&quot;Venta&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo venta</label>
    <type>Text</type>
</CustomField>