force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Total_cotizacion__c.field-meta.xml
<CustomField>
    <fullName>AM_Total_cotizacion__c</fullName>
    <formula>AM_Valor_total__c + (( AM_Valor_matricula__c + AM_Valor_SOAT__c +  
AM_Valor_seguro_robo__c)* AM_Cantidad__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total cotización</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>