force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Total_cotizacion_S1__c.field-meta.xml
<CustomField>
    <fullName>AM_Total_cotizacion_S1__c</fullName>
    <formula>IF(RecordType.Name=&quot;Contado&quot;,AM_Valor_total_S1__c+AM_Valor_matricula_S1__c+AM_Valor_SOAT_S1__c+AM_Valor_seguro_robo_S1__c, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total cotización sugerido 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>