force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Total_cotizacion_S2__c.field-meta.xml
<CustomField>
    <fullName>AM_Total_cotizacion_S2__c</fullName>
    <formula>IF(RecordType.Name = &quot;Contado&quot;, AM_valor_total_S2__c + AM_valor_matricula_S2__c + AM_valor_SOAT_S2__c + AM_valor_seguro_robo_S2__c, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total cotización sugerido 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>