force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Ultimo_comentario__c.field-meta.xml
<CustomField>
    <fullName>AM_Ultimo_comentario__c</fullName>
    <label>Ultimo comentario</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>