force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Usuario_a_que_club_pertenece__c.field-meta.xml
<CustomField>
    <fullName>AM_Usuario_a_que_club_pertenece__c</fullName>
    <formula>AM_Usuario_motocicleta__r.PersonContact.AM_A_que_club_pertenece__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usuario a que club pertenece</label>
    <type>Text</type>
</CustomField>