force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Usuario_centro_educativo_hijo4__c.field-meta.xml
<CustomField>
    <fullName>AM_Usuario_centro_educativo_hijo4__c</fullName>
    <formula>AM_Usuario_motocicleta__r.PersonContact.AM_Centro_educativo_Hijo4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usuario centro educativo hijo4</label>
    <type>Text</type>
</CustomField>