force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Usuario_correo_electronico__c.field-meta.xml
<CustomField>
    <fullName>AM_Usuario_correo_electronico__c</fullName>
    <formula>AM_Usuario_motocicleta__r.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usuario correo electronico</label>
    <type>Text</type>
</CustomField>