force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Usuario_depende_economicamente_hijo3__c.field-meta.xml
<CustomField>
    <fullName>AM_Usuario_depende_economicamente_hijo3__c</fullName>
    <formula>TEXT(AM_Usuario_motocicleta__r.PersonContact.AM_Depende_economicamente_de_usted_Hijo3__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usuario depende economicamente hijo3</label>
    <type>Text</type>
</CustomField>