force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Usuario_deporte_que_practica__c.field-meta.xml
<CustomField>
    <fullName>AM_Usuario_deporte_que_practica__c</fullName>
    <formula>TEXT( AM_Usuario_motocicleta__r.AM_Deporte_que_practica__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usuario deporte que practica</label>
    <type>Text</type>
</CustomField>